<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_RequeestChange" Id="{75e5bba3-be85-4c06-b48d-660f20da55be}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//Przyciski zmaiany stanu	
//	fbprUndefined			: FB_RequestChanges;
	fbprAbort				: FB_MCRequiredChange;
  	fbprClear				: FB_MCRequiredChange;
   	fbprReset				: FB_MCRequiredChange;
   	fbprStart				: FB_MCRequiredChange;
   	fbprStop				: FB_MCRequiredChange;
   	fbprHold				: FB_MCRequiredChange;
   	fbprUnhold				: FB_MCRequiredChange;
   	fbprSuspend				: FB_MCRequiredChange;
   	fbprUnsuspend			: FB_MCRequiredChange;
  	fbprComplete			: FB_MCRequiredChange;
//przyciski zmiany trybu
//	fbprNiedozwolony		: FB_SITP_PolecenieZmianyTrybu (ePolecenie := E_SITP_PolecenieZmianyTrybu.brak);     
	fbprProduction			: FB_MCRequiredChange;
    fbprMaintenance			: FB_MCRequiredChange;
    fbprManual				: FB_MCRequiredChange;
    fbprWashing				: FB_MCRequiredChange;
    fbprDiagnostics			: FB_MCRequiredChange;
//    fbprUzytkownika2		: FB_RequestChanges;
//   fbprUzytkownika3		: FB_RequestChanges;
//    fbprUzytkownika4		: FB_RequestChanges;
//    fbprUzytkownika5		: FB_RequestChanges;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>